// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Article / Code Block Default Code Block 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <pre
    className="sc-AxjAm TOBCr"
    tabIndex="0"
  >
    <code
      class="language-javascript"
    >
      import { Greeting } from './Greeting';

export default {
  title: 'Default Greeting',
  // Pass the component to allow the docs addon access to the metadata!
  component: Greeting,
};

    </code>
  </pre>,
]
`;

exports[`Storyshots Article / Inline Sharp Image Default Inline Sharp Image 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "maxHeight": null,
        "maxWidth": null,
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      aria-hidden={true}
      style={
        Object {
          "paddingBottom": "100%",
          "width": "100%",
        }
      }
    />
    <img
      alt=""
      aria-hidden={true}
      src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAGQABAAIDAAAAAAAAAAAAAAAAAAIFAQME/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEAMQAAABvefbXFqDEQkD/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDEBEABBL/2gAIAQEAAQUCY+VnZaNyg3LrTZKnGgMf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAGhAAAgMBAQAAAAAAAAAAAAAAAREAEDFRAv/aAAgBAQAGPwInkQr0OiMrFeV//8QAGRABAQEBAQEAAAAAAAAAAAAAAQARMSFB/9oACAEBAAE/IQR4Nt565s2QdQIR4vk3U++JCNBdv//aAAwDAQACAAMAAAAQAAc8/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPxAf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPxAf/8QAHRABAAICAgMAAAAAAAAAAAAAAQARITFBYVFxsf/aAAgBAQABPxCmmwr6lP1nHxMXEarZIaLSHUTqVuzifCICBOyVAH1F2Z//2Q=="
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "transitionDelay": "500ms",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="(max-width: 700px) 100vw, 700px"
        srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
        type="image/webp"
      />
      <source
        sizes="(max-width: 700px) 100vw, 700px"
        srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
      />
      <img
        alt="Alternative text for an image."
        loading="lazy"
        onLoad={[Function]}
        sizes="(max-width: 700px) 100vw, 700px"
        src="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg"
        srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source type='image/webp' srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><source srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" src=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg\\" alt=\\"Alternative text for an image.\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>,
]
`;

exports[`Storyshots Article Default Article 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <article
    className="sc-AxirZ iWZnVd"
  >
    <h2>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
    </p>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
    </p>
    <blockquote>
      <em>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
      </em>
    </blockquote>
    <ul>
      

      <li>
        Sed pellentesque non arcu eu efficitur.
      </li>
      

      <li>
        Aliquam non convallis quam.
      </li>
      

      <li>
        Donec a pretium velit, non congue magna.
      </li>
      

    </ul>
    <figure
      className="kg-card kg-image-card kg-card-hascaption fluid-image"
      style={
        Object {
          "flex": "1 1 0",
        }
      }
    >
      <div
        className="kg-image gatsby-image-wrapper"
        style={
          Object {
            "maxHeight": null,
            "maxWidth": null,
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "100%",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAGQABAAIDAAAAAAAAAAAAAAAAAAIFAQME/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEAMQAAABvefbXFqDEQkD/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDEBEABBL/2gAIAQEAAQUCY+VnZaNyg3LrTZKnGgMf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAGhAAAgMBAQAAAAAAAAAAAAAAAREAEDFRAv/aAAgBAQAGPwInkQr0OiMrFeV//8QAGRABAQEBAQEAAAAAAAAAAAAAAQARMSFB/9oACAEBAAE/IQR4Nt565s2QdQIR4vk3U++JCNBdv//aAAwDAQACAAMAAAAQAAc8/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPxAf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPxAf/8QAHRABAAICAgMAAAAAAAAAAAAAAQARITFBYVFxsf/aAAgBAQABPxCmmwr6lP1nHxMXEarZIaLSHUTqVuzifCICBOyVAH1F2Z//2Q=="
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            sizes="(max-width: 700px) 100vw, 700px"
            srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
            type="image/webp"
          />
          <source
            sizes="(max-width: 700px) 100vw, 700px"
            srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
          />
          <img
            alt="alt text for pamela"
            loading="lazy"
            onLoad={[Function]}
            sizes="(max-width: 700px) 100vw, 700px"
            src="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg"
            srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source type='image/webp' srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><source srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" src=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg\\" alt=\\"alt text for pamela\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <figcaption>
        Curabitur in vestibulum nunc. 
      </figcaption>
    </figure>
    <pre
      className="sc-AxjAm TOBCr"
      tabIndex="0"
    >
      <code
        className="language-javascript"
      >
        import { Greeting } from './Greeting';

export default {
  title: 'Default Greeting',
  // Pass the component to allow the docs addon access to the metadata!
  component: Greeting,
};

      </code>
    </pre>
    <h3
      id="image-sizes"
    >
      Here is a smaller heading. It is not a sharp image.
    </h3>
    <figure
      className="kg-card kg-image-card"
    >
      <img
        alt="a scenic view of a landscape."
        className="kg-image"
        src="https://upload.wikimedia.org/wikipedia/commons/9/93/Denali_National_Park_Polychrome_Mountains_Wide_17350px.jpg"
      />
    </figure>
  </article>,
]
`;

exports[`Storyshots Article Empty Article 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <article
    className="sc-AxirZ iWZnVd"
  >
    Nothing to see here.
  </article>,
]
`;

exports[`Storyshots DottedWrapper Default Dotted Wrapper 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <div
    className="sc-AxiKw hJBSrV"
    spacing={10}
  >
    Here is some text with a dotted border!
  </div>,
]
`;

exports[`Storyshots Layout / Header Default Header 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-Axmtr fxiCcq"
  >
    <h1
      className="sc-AxmLO fKlHLG"
    >
      Will Hall's
    </h1>
    <p
      className="sc-fzozJi ejdCYO"
    >
      journey through everything
    </p>
    <nav
      className="sc-AxhCb fAIqMK"
    >
      <a
        active={true}
        className="sc-AxhUy bSKdTP"
        href="/"
      >
        writing
      </a>
      <div
        className="sc-AxgMl kdVUKT"
      />
      <a
        active={false}
        className="sc-AxhUy bSJESV"
        href="/about"
      >
        about
      </a>
      <div
        className="sc-AxheI kdZzgg"
      />
    </nav>
  </header>,
]
`;

exports[`Storyshots Layout / Header With Tag 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-Axmtr fxiCcq"
  >
    <h1
      className="sc-AxmLO fKlHLG"
    >
      Will Hall's
    </h1>
    <p
      className="sc-fzozJi ejdCYO"
    >
      journey through everything
    </p>
    <nav
      className="sc-AxhCb fAIqMK"
    >
      <a
        active={true}
        className="sc-AxhUy bSKdTP"
        href="/"
      >
        writing
      </a>
      <div
        className="sc-AxgMl kdVUKT"
      />
      <a
        active={false}
        className="sc-AxhUy bSJESV"
        href="/about"
      >
        about
      </a>
      <div
        className="sc-AxheI kdZzgg"
      >
        code
      </div>
    </nav>
  </header>,
]
`;

exports[`Storyshots Layout / Header Wrapping Links 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <header
    className="sc-Axmtr fxiCcq"
  >
    <h1
      className="sc-AxmLO fKlHLG"
    >
      Will Hall's
    </h1>
    <p
      className="sc-fzozJi ejdCYO"
    >
      journey through everything
    </p>
    <nav
      className="sc-AxhCb fAIqMK"
    >
      <a
        active={true}
        className="sc-AxhUy bSKdTP"
        href="/"
      >
        writing
      </a>
      <div
        className="sc-AxgMl kdVUKT"
      />
      <a
        active={false}
        className="sc-AxhUy bSJESV"
        href="/about"
      >
        about
      </a>
      <div
        className="sc-AxgMl kdVUKT"
      />
      <a
        active={false}
        className="sc-AxhUy bSJESV"
        href="/projects"
      >
        projects
      </a>
      <div
        className="sc-AxgMl kdVUKT"
      />
      <a
        active={false}
        className="sc-AxhUy bSJESV"
        href="/news"
      >
        news
      </a>
      <div
        className="sc-AxgMl kdVUKT"
      />
      <a
        active={false}
        className="sc-AxhUy bSJESV"
        href="/fun"
      >
        more
      </a>
      <div
        className="sc-AxheI kdZzgg"
      />
    </nav>
  </header>,
]
`;

exports[`Storyshots Layout Default Layout 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <main
    className="sc-fzoLsD kmTNTM"
  >
    <header
      className="sc-Axmtr fxiCcq"
    >
      <h1
        className="sc-AxmLO fKlHLG"
      >
        Will Hall's
      </h1>
      <p
        className="sc-fzozJi ejdCYO"
      >
        journey through everything
      </p>
      <nav
        className="sc-AxhCb fAIqMK"
      >
        <a
          active={true}
          className="sc-AxhUy bSKdTP"
          href="/"
        >
          writing
        </a>
        <div
          className="sc-AxheI kdZzgg"
        />
      </nav>
    </header>
    <h1>
      Content Goes Here
    </h1>
    <footer
      className="sc-fzplWN gDYTbf"
    >
      <p>
        © Will Hall 2020
      </p>
      <p
        className="sc-fzpans hqcdSA"
        data-testid="cookie-manager"
        onClick={[Function]}
      >
        Manage Cookies
      </p>
    </footer>
  </main>,
]
`;

exports[`Storyshots Post Default Post 1`] = `
Array [
  <link
    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Lora:ital,wght@0,400;0,600;1,400;1,600&family=Playfair+Display:wght@400;600;900&display=swap"
    rel="stylesheet"
  />,
  <article
    className="sc-fznKkj dwhNSG"
  >
    <div
      className="sc-AxiKw hJBSrV sc-fznZeY dAhBff"
      spacing={10}
    >
      <h1
        className="sc-fznyAO eCjWOv"
      >
        Post title
      </h1>
      <div
        className="sc-fzokOt fApyfH"
      >
        <a
          href="/tag/tag"
        >
          Tag
        </a>
        <div
          className="sc-fzqBZW hSWgKW"
        />
        1/1/1970, 01:00:00
      </div>
      <div
        className="sc-fzokOt fApyfH"
      >
        <div>
          3
           mins
        </div>
      </div>
      <article
        className="sc-AxirZ iWZnVd"
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
        </p>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque non arcu eu efficitur. Aliquam non convallis quam. Donec a pretium velit, non congue magna. Maecenas tempor lectus id tempus lobortis. Curabitur in vestibulum nunc. Suspendisse vitae posuere eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut gravida, odio at interdum fermentum, justo nibh varius enim, vitae pulvinar est mauris quis purus. Donec scelerisque sapien a congue luctus. Maecenas suscipit lacinia pretium. Maecenas sed suscipit augue. 
        </p>
        <blockquote>
          <em>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
          </em>
        </blockquote>
        <ul>
          

          <li>
            Sed pellentesque non arcu eu efficitur.
          </li>
          

          <li>
            Aliquam non convallis quam.
          </li>
          

          <li>
            Donec a pretium velit, non congue magna.
          </li>
          

        </ul>
        <figure
          className="kg-card kg-image-card kg-card-hascaption fluid-image"
          style={
            Object {
              "flex": "1 1 0",
            }
          }
        >
          <div
            className="kg-image gatsby-image-wrapper"
            style={
              Object {
                "maxHeight": null,
                "maxWidth": null,
                "overflow": "hidden",
                "position": "relative",
              }
            }
          >
            <div
              aria-hidden={true}
              style={
                Object {
                  "paddingBottom": "100%",
                  "width": "100%",
                }
              }
            />
            <img
              alt=""
              aria-hidden={true}
              src="data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAGQABAAIDAAAAAAAAAAAAAAAAAAIFAQME/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/aAAwDAQACEAMQAAABvefbXFqDEQkD/8QAGxAAAwACAwAAAAAAAAAAAAAAAQIDEBEABBL/2gAIAQEAAQUCY+VnZaNyg3LrTZKnGgMf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAGhAAAgMBAQAAAAAAAAAAAAAAAREAEDFRAv/aAAgBAQAGPwInkQr0OiMrFeV//8QAGRABAQEBAQEAAAAAAAAAAAAAAQARMSFB/9oACAEBAAE/IQR4Nt565s2QdQIR4vk3U++JCNBdv//aAAwDAQACAAMAAAAQAAc8/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPxAf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPxAf/8QAHRABAAICAgMAAAAAAAAAAAAAAQARITFBYVFxsf/aAAgBAQABPxCmmwr6lP1nHxMXEarZIaLSHUTqVuzifCICBOyVAH1F2Z//2Q=="
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                sizes="(max-width: 700px) 100vw, 700px"
                srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
                type="image/webp"
              />
              <source
                sizes="(max-width: 700px) 100vw, 700px"
                srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
              />
              <img
                alt="alt text for pamela"
                loading="lazy"
                onLoad={[Function]}
                sizes="(max-width: 700px) 100vw, 700px"
                src="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg"
                srcSet="https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source type='image/webp' srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><source srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 700px) 100vw, 700px\\" srcset=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 175w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 350w,
https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg 700w\\" src=\\"https://s9.limitedrun.com/images/1417418/v600_pamela_1500.jpg\\" alt=\\"alt text for pamela\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
          <figcaption>
            Curabitur in vestibulum nunc. 
          </figcaption>
        </figure>
        <pre
          className="sc-AxjAm TOBCr"
          tabIndex="0"
        >
          <code
            className="language-javascript"
          >
            import { Greeting } from './Greeting';

export default {
  title: 'Default Greeting',
  // Pass the component to allow the docs addon access to the metadata!
  component: Greeting,
};

          </code>
        </pre>
        <h3
          id="image-sizes"
        >
          Here is a smaller heading. It is not a sharp image.
        </h3>
        <figure
          className="kg-card kg-image-card"
        >
          <img
            alt="a scenic view of a landscape."
            className="kg-image"
            src="https://upload.wikimedia.org/wikipedia/commons/9/93/Denali_National_Park_Polychrome_Mountains_Wide_17350px.jpg"
          />
        </figure>
      </article>
    </div>
  </article>,
]
`;
